SCRUM-26: Implementar el endpoint de autenticación.